Clarify compile-time dependency handling